insert all graph images

--- a/src/app/admin/content/analytic/admin-analytic.component.html
+++ b/src/app/admin/content/analytic/admin-analytic.component.html
@@ -302,70 +302,9 @@
 				</div>
 			</div>
 		</div>
-		      	
-			</section>
+</section>
 
 			<section id="content6" class="tab-content">
-				<div class="content-wrapper">
-					<div class="panel panel-default animated fadeInRight">
-					<div>
-					<div>
-					  <div class="table-responsive">
-					    <table class="table table-bordered table-hover">
-					      <thead>
-					      <tr>
-					        <th>Item</th>
-					        <th>Topic</th>
-					        <th>GQ1</th>
-					        <th>GQ2</th>
-					        <th>GQ3</th>
-					        <th>GQ4</th>
-					        <th>Average</th>
-					        <th>Matome Test</th>
-					        <th>Pass Average</th>
-					      </tr>
-					      </thead>
-					      <tbody>
-					      <tr>
-					        <td>Hiragana6</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
-					        <td>6.7</td>
-					        <td>7.2</td>
-					      </tr>
-					      <tr>
-					        <td>Katakana6</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
-					        <td>6.7</td>
-					        <td>7.2</td>
-					      </tr>
-					      <tr>
-					        <td>Greeting6</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>70.7</td>
-					        <td>62.7</td>
-					        <td>73.2</td>
-					      </tr>
-					      </tbody>
-					    </table>
-					  </div>
-					</div>
-				</div>
-			</div>
-		</div>
-		      	
+                <img src="./assets/graph.png">
 			</section>
 		</div>
