--- a/src/app/admin/content/student/admin-student.component.html
+++ b/src/app/admin/content/student/admin-student.component.html
@@ -122,4 +122,8 @@
 					</div>
 				</div>
 			</section>
+
+			<section id="content3" class="tab-content">
+				<img src="./assets/graph.png">
+			</section>
 		</div>
