--- a/src/app/corporate/content/analytic/corporate-analytic.component.html
+++ b/src/app/corporate/content/analytic/corporate-analytic.component.html
@@ -93,90 +93,9 @@
             </div>
         </div>
     </div>
-              
-        </section>
+</section>
 
         <section id="content2" class="tab-content">
-            <div class="content-wrapper">
-                <div class="panel panel-default animated fadeInRight">
-                <div>
-                <div>
-                  <div class="table-responsive">
-                    <table class="table table-bordered table-hover">
-                      <thead>
-                      <tr>
-                        <th rowspan="2">氏名</th>
-                        <th rowspan="2">年齢</th>
-                        <th rowspan="2">開始年月日</th>
-                        <th rowspan="2">終了予定日</th>
-                        <th rowspan="2">残日数</th>
-                        <th rowspan="2">目標ペース</th>
-                        <th colspan="5">学習時間</th>
-                        <th colspan="2">進捗</th>
-                        <th colspan="7">成績</th>
-                        <th colspan="2">警告</th>
-                      </tr>
-                      <tr>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>進捗</th>
-                        <th>学習時間</th>
-                        <th>成績</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>学習時間</th>
-                        <th>警告</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr>
-                        <td>Hiragana2</td>
-                        <td>T1</td>
-                        <td>65</td>
-                        <td>75</td>
-                        <td>70</td>
-                        <td>65</td>
-                        <td>7.7</td>
-                        <td>6.7</td>
-                        <td>7.2</td>
-                      </tr>
-                      <tr>
-                        <td>Katakana2</td>
-                        <td>T1</td>
-                        <td>65</td>
-                        <td>75</td>
-                        <td>70</td>
-                        <td>65</td>
-                        <td>7.7</td>
-                        <td>6.7</td>
-                        <td>7.2</td>
-                      </tr>
-                      <tr>
-                        <td>Greeting2</td>
-                        <td>T1</td>
-                        <td>65</td>
-                        <td>75</td>
-                        <td>70</td>
-                        <td>65</td>
-                        <td>70.7</td>
-                        <td>62.7</td>
-                        <td>73.2</td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-            </div>
-        </div>
-    </div>
-          
-        </section>
-
-    </div>
+                <img src="./assets/graph.png">
+    　   </section>
+</div>
