--- a/src/app/corporate/content/analytic/corporate-analytic.component.scss
+++ b/src/app/corporate/content/analytic/corporate-analytic.component.scss
@@ -85,7 +85,7 @@ label {
 
 .tab_container [id^="tab"]:checked + label {
   background: #f0f0f0;
-  box-shadow: inset 0 3px cadetblue;
+  box-shadow: inset 0 3px #ff4081;
 }
 
 .tab_container [id^="tab"]:checked + label .fa {
