--- a/src/app/corporate/content/user/detail/corporate-detail.component.scss
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.scss
@@ -10,6 +10,14 @@ span.text_detail {
   color: #000;
   padding: 5px 0;
 }
+span.text_detail2 {
+  display: block;
+  font-size: 20px;
+  color: #000;
+  padding: 0;
+  margin-top: -10px;
+  padding-left: 15px; 
+}
 .h-75 {
   height: 75px;
 }
