--- a/src/app/corporate/content/user/detail/corporate-detail.component.html
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.html
@@ -80,12 +80,16 @@
     <div class="row animated zoomIn amount ">
       <div class="col-md-3 col-xs-3 col-sm-3 padding-10">
         <div class="box-data">
-          <span class="data">
-            what data
-          </span>
-          <span class="data">
-            what data
-          </span>
+          <span class="data">ログイン</span>
+           <img src="./assets/graph2.png">
+        </div>
+         <div class="box-data">
+          <span class="data">ログアウト</span>
+            <img src="./assets/graph2.png">
+        </div>
+        <div class="box-data">
+          <span class="data">復習時間</span>
+            <img src="./assets/graph2.png">
         </div>
       </div>
       <div class="col-md-9 col-xs-9 col-sm-9 padding-10">
@@ -114,12 +118,12 @@
     <div class="row animated zoomIn amount ">
       <div class="col-md-3 col-xs-3 col-sm-3 padding-10">
         <div class="box-data">
-          <span class="data">
-            what data
-          </span>
-          <span class="data">
-            what data
-          </span>
+          <span class="data">語彙</span>
+           <img src="./assets/graph2.png">
+          <span class="data">漢字</span>
+            <img src="./assets/graph2.png">
+          <span class="data">文法</span>
+            <img src="./assets/graph2.png">
         </div>
       </div>
       <div class="col-md-9 col-xs-9 col-sm-9 padding-10">
