--- a/src/app/corporate/content/home/corporate-home.component.html
+++ b/src/app/corporate/content/home/corporate-home.component.html
@@ -19,7 +19,7 @@
               <tbody>
               <tr *ngFor="let student of students; let i = index">
                 <td>{{ i+1 }}</td>
-                <td>{{ student.age }}</td>
+                <td>{{ student.name }}</td>
                 <td>{{ student.total }}</td>
                 <td>{{ student.male }}</td>
                 <td>{{ student.female }}</td>
